crates/ars-core/tests/ui/has_id_missing_id.stderr
error: HasId requires a field named `id` of type String
 --> tests/ui/has_id_missing_id.rs:4:1
  |
4 | / struct Props {
5 | |     pub label: String,
6 | | }
  | |_^
