crates/ars-core/tests/ui/has_id_missing_id.rs
use ars_core::HasId;

#[derive(HasId)]
struct Props {
    pub label: String,
}

fn main() {}
